# CIAM_Electric_Field_Mapping

./: README.md  clean_pc.py  test12_acdc.txt  test12_acdc2.txt  test12_jha2.txt
Basti/: Makefile  bcm2835_chip.cpp  bcm2835_chip.h  data_logger.cpp  data_logger.h  main.cpp  rhd2000registers.cpp  rhd2000registers.h
Basti/RPi_Ctrl_SW/: Makefile  README.md  bcm2835_chip.cpp  bcm2835_chip.h  data_logger.cpp  data_logger.h  main.cpp  plot_measurements.p  rhd2000registers.cpp  rhd2000registers.h
Basti/RPi_Ctrl_SW/bcm2835-1.71/src/: CMakeLists.txt
Patrick/: 0mV.txt  0mV_agndwire.txt  0mV_noagndwire.txt  0mV_noagndwire_thenagndwire.txt  100mV_ladder.txt  Potato.txt  calibration_ladder_klein.txt  collect_data.py  rhd2000registers.cpp  shortcircuit_WEREtogether_noagndwire.txt  shortcircuit_WEREtogether_withagndwire.txt  shortcircuit_mitagndwireonRE.txt  shortcircuit_mitagndwireonWE.txt  shortcircuit_noagndwire.txt  test12_fstatINA18_testwivium_4.txt
Patrick/Arduino Motor and Measurement/: SerialReader.py  openephys_analysis.py  platformio.ini
Patrick/MindMaps/: init.txt
Patrick/NEEDAGROUND/: vref_nofreistatt_vsweep100_WERE_noANGD2                                                                                                                      .txt  vref_nofreistatt_vsweep100_n100                                                                                                                       .txt  vref_nofreistatt_vsweep100_n100_WERE_ANGD                                                                                                                      .txt  (+2 more)
(+32 files in other folders)
